<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20sp"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/playwrite_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84sp"
        android:fontFamily="@font/playwrite_extralight"
        android:text="@string/app_desc"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp"
        android:background="#555555"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="10sp" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="650sp"

        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--    Name-->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="12sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <!--    Email-->

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/email"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <!--    Course And Term-->
            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="20sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <!-- Course Field -->
                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Course Title -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course"
                        android:textSize="20sp" />

                    <!-- Course Input -->
                    <EditText
                        android:id="@+id/courseField"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_marginTop="10sp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/course_hint"
                        android:inputType="text"
                        android:padding="12sp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#888888"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Spacer between fields -->
                <Space
                    android:layout_width="16sp"
                    android:layout_height="wrap_content" />

                <!-- Term Field -->
                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Term Title -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term"
                        android:textSize="20sp" />

                    <!-- Term Input -->
                    <EditText
                        android:id="@+id/termField"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_marginTop="10sp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/term_hint"
                        android:inputType="text"
                        android:padding="12sp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#888888"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <!--    Subjects-->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/subjects"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/subjectChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintHeight_min="150sp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/rounded_edittext"
                android:contentDescription="Add Item Button"
                android:padding="8sp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_plus"
                app:layout_constraintBottom_toBottomOf="@+id/subjectChipGroup"
                app:layout_constraintEnd_toEndOf="@+id/subjectChipGroup" />


            <!--    Done Button-->
            <LinearLayout
                android:id="@+id/doneLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectChipGroup">

                <!-- Text for "Done" -->
                <TextView
                    android:id="@+id/doneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4sp"
                    android:text="@string/done"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <!-- Right Arrow Icon -->
                <ImageView
                    android:id="@+id/arrowIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#FFFFFF" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>