<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingTop="20sp"
    android:paddingStart="20sp"
    android:background="@drawable/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_activity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:elevation="10sp"
        android:src="@drawable/back"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@drawable/ic_profile_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profileIcon"
            android:paddingStart="10sp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_toEndOf="@+id/profileIcon"
            android:paddingStart="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <TextView
            android:id="@+id/courseTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:paddingVertical="10sp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:paddingVertical="10sp"
            android:textSize="20sp"

            android:paddingStart="10sp"
            android:layout_toEndOf="@+id/courseTextField"/>

        <EditText
            android:id="@+id/course"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20sp"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:longClickable="false"
            android:drawableEnd="@drawable/edit"
            android:layout_toEndOf="@+id/courseTextField"
            android:background="@drawable/rounded_edittext" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <TextView
            android:id="@+id/termTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term"
            android:paddingVertical="10sp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:paddingVertical="10sp"
            android:textSize="20sp"

            android:paddingStart="10sp"
            android:layout_toEndOf="@+id/termTextField"/>

        <EditText
            android:id="@+id/term"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:longClickable="false"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20sp"
            android:drawableEnd="@drawable/edit"
            android:layout_toEndOf="@+id/termTextField"
            android:background="@drawable/rounded_edittext" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:paddingVertical="10sp"
        android:text="@string/subjects"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="10sp"
        android:paddingStart="10sp"
        android:text="@string/colon"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

<ScrollView
    android:id="@+id/subjectChipgroupScrollview"
    android:layout_width="match_parent"
    android:layout_height="400sp"
    android:layout_marginTop="10sp"
    android:layout_marginEnd="20sp"
    app:layout_constraintHeight_min="150sp"
    android:background="@drawable/rounded_edittext"
    app:layout_constraintTop_toBottomOf="@+id/textField">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/subjectChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</ScrollView>
    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/rounded_edittext"
        android:src="@drawable/ic_plus"
        android:scaleType="fitXY"
        android:padding="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/subjectChipgroupScrollview"
        app:layout_constraintEnd_toEndOf="@+id/subjectChipgroupScrollview" />

</androidx.constraintlayout.widget.ConstraintLayout>